# torncity_tools

./: .gitignore  CLAUDE.md  Makefile  README.md  editor.entitlements
assets/: office_sell.xlsx
doc/: resolve.md  tool_install.md
godot/: .gitignore  export_presets.cfg  project.godot
godot/addons/toast/: .gitignore  README.md
godot/addons/toast/rust/: Cargo.toml
godot/addons/toast/rust/src/: config.rs  entry.rs  lib.rs  manager.rs  toast.rs  types.rs
godot/addons/toast/scenes/: toast.tscn  toast_manager.tscn
godot/assets/appicon/: app.png.import
godot/assets/audio/: notification-18-270129.mp3.import
godot/assets/data/: office_sell.json  torncity_items.csv  torncity_items.csv.import
godot/assets/icons/: loading.png.import  setting.png.import  shop.png.import
godot/native/: ext.gdextension
godot/node/: icon_http_request.tscn
godot/scenes/: main.tscn  main2.tscn  profit_item.tscn  profit_panel.tscn  settings.tscn  weav3r.tscn  weav3r_item.tscn
godot/scripts/: settings_controller.gd  timer_controller.gd
rust/: .gitignore  Cargo.toml
rust/crates/model/: Cargo.toml
rust/crates/model/src/: lib.rs  user_log.rs
rust/crates/model/src/office_sell/: mod.rs
rust/crates/model/src/weav3r/: favorites.rs
rust/crates/nodex/: Cargo.toml
rust/crates/nodex/src/: lib.rs  prelude.rs  profit_panel.rs  weav3r_item.rs
rust/crates/nodex/src/node/: http_weav3r.rs  mod.rs  prelude.rs  profit_panel.rs  weav3r_item.rs
rust/crates/nodex/src/node/http/: image.rs  mod.rs  user_log.rs  weav3r_favorites.rs
rust/crates/nodex/src/scenes/: main_scene.rs  mod.rs  weav3r_main_scene.rs  weav3r_scene.rs  weav3r_setting_scene.rs
rust/crates/tools/: Cargo.toml
rust/crates/tools/src/: base.rs  cfg.rs  file.rs  http.rs  image.rs  lib.rs  node.rs  order_change.rs
rust/crates/tools/src/order_change/: change.rs  recovery.rs  result.rs  tests.rs
rust/crates/torn_logic/: Cargo.toml
rust/crates/torn_logic/src/: item.rs  lib.rs  office_sell.rs  trade.rs
rust/crates/weav3r/: Cargo.toml
rust/crates/weav3r/src/: data.rs  favorite.rs  lib.rs  profit.rs
rust/tools/mock_server/: Cargo.toml
rust/tools/mock_server/src/: lib.rs  main.rs
rust/tools/tools-cli/: Cargo.toml
rust/tools/tools-cli/src/: main.rs
script/: build_win_icon.sh  package-all.sh  package-android.sh  package-desktop.sh  package-ios.sh  package-release.sh
