[workspace]
resolver = "2"
members = [
    "bin",
    "crates/model",
    "crates/nodex",
    "crates/tools",
    "crates/torn_logic",
    "crates/weav3r",
    "tools/mock_server",
]

[workspace.dependencies]
weav3r = { path = "crates/weav3r" }
nodex = { path = "crates/nodex" }
tools = { path = "crates/tools" }
torn_logic = { path = "crates/torn_logic" }
model = { path = "crates/model" }

# 默认使用最新版本，Android 打包时脚本会自动切换到 0.4.2
godot = "0.4.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
csv = "1.4"
tokio = { version = "1", features = ["full"] }
axum = "0.8"