[workspace]
resolver = "2"
members = [
    "bin",
    "crates/model",
    "crates/nodex",
    "crates/tools",
    "crates/torn_logic",
    "crates/weav3r",
    "tools/mock_server",
]

[workspace.dependencies]
weav3r = { path = "crates/weav3r" }
nodex = { path = "crates/nodex" }
tools = { path = "crates/tools" }
torn_logic = { path = "crates/torn_logic" }
model = { path = "crates/model" }

# 默认使用最新版本，Android 打包时脚本会自动切换到 0.4.2
godot = "0.4.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
csv = "1.4"
tokio = { version = "1", features = ["full"] }
axum = "0.8"

# debug = 0	不生成任何调试信息
# debug = 1	仅生成基础调试信息
# debug = 2	生成完整调试信息（推荐用于调试）
[profile.dev]
debug = 2  # 生成完整调试符号（等同于 true）
opt-level = 0  # 禁用优化，确保调试器能准确显示变量
split-debuginfo = "unpacked"  # 改善调试器性能

[profile.release]
debug = 1       # 生成部分调试信息（如行号）